files/sme/iptables-save
# Generated by iptables-save v1.3.5 on Tue Dec  3 23:01:08 2019
*mangle
:PREROUTING ACCEPT [20490539:13738447979]
:INPUT ACCEPT [2381511:238525792]
:FORWARD ACCEPT [18108994:13499919548]
:OUTPUT ACCEPT [5962627:478083270]
:POSTROUTING ACCEPT [24084595:13981072842]
COMMIT
# Completed on Tue Dec  3 23:01:08 2019
# Generated by iptables-save v1.3.5 on Tue Dec  3 23:01:08 2019
*nat
:PREROUTING ACCEPT [432391:62974838]
:POSTROUTING ACCEPT [294715:22416638]
:OUTPUT ACCEPT [504537:36932051]
:PortForwarding - [0:0]
:PortForwarding_1890 - [0:0]
:PostroutingOutbound - [0:0]
:SMTPProxy - [0:0]
:TransProxy - [0:0]
-A PREROUTING -j PortForwarding 
-A PREROUTING -p tcp -m tcp --dport 25 -j SMTPProxy 
-A PREROUTING -p tcp -m tcp --dport 80 -j TransProxy 
-A POSTROUTING -o eth1 -j PostroutingOutbound 
-A PortForwarding -d 192.168.42.10 -j PortForwarding_1890 
-A PostroutingOutbound -s 192.168.42.10 -j ACCEPT 
-A PostroutingOutbound -j MASQUERADE 
-A SMTPProxy -d 127.0.0.1 -j ACCEPT 
-A SMTPProxy -d 192.168.66.1 -j ACCEPT 
-A SMTPProxy -d 192.168.42.10 -j ACCEPT 
-A SMTPProxy 
-A TransProxy -d 127.0.0.1 -j ACCEPT 
-A TransProxy -d 192.168.66.1 -j ACCEPT 
-A TransProxy -d 192.168.42.10 -j ACCEPT 
-A TransProxy -j ACCEPT 
COMMIT
# Completed on Tue Dec  3 23:01:08 2019
# Generated by iptables-save v1.3.5 on Tue Dec  3 23:01:08 2019
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:ForwardedTCP - [0:0]
:ForwardedTCP_1890 - [0:0]
:ForwardedUDP - [0:0]
:ForwardedUDP_1890 - [0:0]
:InboundICMP - [0:0]
:InboundICMP_1890 - [0:0]
:InboundTCP - [0:0]
:InboundTCP_1890 - [0:0]
:InboundUDP - [0:0]
:InboundUDP_1890 - [0:0]
:PPPconn - [0:0]
:PPPconn_1 - [0:0]
:SMTPProxy - [0:0]
:SSH_Autoblock - [0:0]
:denylog - [0:0]
:gre-in - [0:0]
:local_chk - [0:0]
:local_chk_1890 - [0:0]
:state_chk - [0:0]
-A INPUT -j state_chk 
-A INPUT -j local_chk 
-A INPUT -j PPPconn 
-A INPUT -s 224.0.0.0/240.0.0.0 -j denylog 
-A INPUT -d 224.0.0.0/240.0.0.0 -j denylog 
-A INPUT -i eth1 -p udp -m udp --dport 67:68 -j ACCEPT 
-A INPUT -p icmp -j InboundICMP 
-A INPUT -p icmp -j denylog 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j InboundTCP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j denylog 
-A INPUT -i eth1 -p udp -j InboundUDP 
-A INPUT -i eth1 -p udp -j denylog 
-A INPUT -p gre -j gre-in 
-A INPUT -p gre -j denylog 
-A INPUT -j denylog 
-A FORWARD -j state_chk 
-A FORWARD -p tcp -m tcp --dport 25 -j SMTPProxy 
-A FORWARD -j local_chk 
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j ForwardedTCP 
-A FORWARD -p udp -j ForwardedUDP 
-A FORWARD -j denylog 
-A OUTPUT -j PPPconn 
-A OUTPUT -s 224.0.0.0/240.0.0.0 -j denylog 
-A OUTPUT -d 224.0.0.0/240.0.0.0 -j denylog 
-A OUTPUT -j ACCEPT 
-A ForwardedTCP -j ForwardedTCP_1890 
-A ForwardedTCP -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j denylog 
-A ForwardedUDP -j ForwardedUDP_1890 
-A ForwardedUDP -p udp -j denylog 
-A InboundICMP -j InboundICMP_1890 
-A InboundICMP -p icmp -j denylog 
-A InboundICMP_1890 -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A InboundICMP_1890 -p icmp -m icmp --icmp-type 0 -j ACCEPT 
-A InboundICMP_1890 -p icmp -m icmp --icmp-type 3 -j ACCEPT 
-A InboundICMP_1890 -p icmp -m icmp --icmp-type 4 -j ACCEPT 
-A InboundICMP_1890 -p icmp -m icmp --icmp-type 11 -j ACCEPT 
-A InboundICMP_1890 -p icmp -m icmp --icmp-type 12 -j ACCEPT 
-A InboundICMP_1890 -j denylog 
-A InboundTCP -j InboundTCP_1890 
-A InboundTCP -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j denylog 
-A InboundTCP_1890 -d ! 192.168.42.10 -j denylog 
-A InboundTCP_1890 -d 192.168.42.10 -p tcp -m tcp --dport 113 -j REJECT --reject-with tcp-reset 
-A InboundTCP_1890 -d 192.168.42.10 -p tcp -m tcp --dport 21 -j ACCEPT 
-A InboundTCP_1890 -d 192.168.42.10 -p tcp -m tcp --dport 80 -j ACCEPT 
-A InboundTCP_1890 -d 192.168.42.10 -p tcp -m tcp --dport 443 -j ACCEPT 
-A InboundTCP_1890 -d 192.168.42.10 -p tcp -m tcp --dport 25 -j ACCEPT 
-A InboundTCP_1890 -d 192.168.42.10 -p tcp -m tcp --dport 465 -j ACCEPT 
-A InboundUDP -j InboundUDP_1890 
-A InboundUDP -p udp -j denylog 
-A InboundUDP_1890 -d ! 192.168.42.10 -j denylog 
-A InboundUDP_1890 -d 192.168.42.10 -p udp -m udp --dport 1194 -j ACCEPT 
-A PPPconn -j PPPconn_1 
-A SSH_Autoblock -m recent --set --name SSH --rsource 
-A SSH_Autoblock -m recent --rcheck --seconds 900 --hitcount 4 --rttl --name SSH --rsource -j denylog 
-A denylog -p udp -m udp --dport 520 -j DROP 
-A denylog -p udp -m udp --dport 137:139 -j DROP 
-A denylog -p tcp -m tcp --dport 137:139 -j DROP 
-A denylog -j ULOG --ulog-prefix "denylog:" 
-A denylog -j DROP 
-A gre-in -d ! 192.168.42.10 -j denylog 
-A gre-in -j denylog 
-A local_chk -j local_chk_1890 
-A local_chk_1890 -i lo -j ACCEPT 
-A local_chk_1890 -s 192.168.66.0/255.255.255.0 -j ACCEPT 
-A state_chk -m state --state RELATED,ESTABLISHED -j ACCEPT 
COMMIT
# Completed on Tue Dec  3 23:01:08 2019
